# airflow-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  config.docker.yaml  config.example.yaml  docker-compose.yaml  install.sh  pyproject.toml
src/airflow_mcp/: auth.py  cli.py  client.py  config.py  ddu_registry.py  server.py  usage.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_tools.py
