[project]
name = "airflow-mcp-server"
version = "0.1.0"
description = "MCP server for Apache Airflow 3.x — multi-instance, pluggable auth"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
airflow-mcp = "airflow_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_mcp"]
